--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Refactoring)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Refactoring main.cpp Monopoly.cpp Monopoly.h Field.cpp Field.h Player.cpp Player.h Dice.cpp Dice.h Board.cpp Board.h)
+add_executable(Refactoring main.cpp Monopoly.cpp Monopoly.h Fields/IField.h Player.cpp Player.h Dice.cpp Dice.h Board.cpp Board.h Fields/Fields.cpp Fields/Fields.h)
